@startuml

package "Acme.Hello.Platform.Profiles.Domain.Model.ValueObjects" {
  class PersonName <<readonly record struct>> {
    +string FirstName
    +string LastName
    +string FullName
    +bool IsAnyNameEmpty()
  }
}

package "Acme.Hello.Platform.Profiles.Domain.Model.Entities" {
  class Developer {
    +Guid Id
    +PersonName Name
    +string FirstName
    +string LastName
    +string GetFullName()
    +bool IsAnyNameEmpty()
  }
}

package "Acme.Hello.Platform.Profiles.Domain.Services" {
  interface IGreetingCounter {
    +int Count
    +void Increment()
  }
}

package "Acme.Hello.Platform.Profiles.Domain.Services.Internal" {
  class GreetingCounter {
    -int _count
    +int Count
    +void Increment()
  }
}

package "Acme.Hello.Platform.Profiles.Interfaces.Rest.Assemblers" {
  class DeveloperAssembler {
    +static Developer? ToEntityFromRequest(GreetDeveloperRequest? request)
  }
  class GreetDeveloperAssembler {
    +static GreetDeveloperResponse ToResponseFromEntity(Developer? developer)
  }
}

package "Acme.Hello.Platform.Profiles.Interfaces.Rest.Resources" {
  class GreetDeveloperRequest {
    +string? FirstName
    +string? LastName
  }
  class GreetDeveloperResponse {
    +Guid? Id
    +string? FullName
    +string Message
    +GreetDeveloperResponse(string message)
  }
  class GetGreetingCountResponse <<record>> {
    +int GreetingCount
  }
}

package "Acme.Hello.Platform.Profiles.Interfaces.Rest" {
  class GreetingEndpoints <<static>> {
    +static IEndpointRouteBuilder MapGreetingEndpoints(this IEndpointRouteBuilder app)
  }
}

Developer *-- PersonName : contains
GreetingCounter ..|> IGreetingCounter : implements

DeveloperAssembler ..> Developer : creates
DeveloperAssembler ..> GreetDeveloperRequest : uses
DeveloperAssembler ..> PersonName : creates
GreetDeveloperAssembler ..> Developer : uses
GreetDeveloperAssembler ..> GreetDeveloperResponse : creates

GreetingEndpoints ..> IGreetingCounter : uses
GreetingEndpoints ..> DeveloperAssembler : uses
GreetingEndpoints ..> GreetDeveloperAssembler : uses
GreetingEndpoints ..> GetGreetingCountResponse : creates

@enduml
